<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_servo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lukas.vitek911@gmail.com">lukas</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ros2_aruco_interfaces</exec_depend>
  <exec_depend>visual_servo_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
